--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 # git ignore file
+output/
+fluids_v3.exe
+fluids_v3.exp
+fluids_v3.ilk
+fluids_v3.lib
+fluids_v3.opensdf
+fluids_v3.pdb
+fluids_v3.sdf
+ipch/
