--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 # git ignore file
+output/
+vc100.pdb
+fluids_v3.exe
+fluids_v3.exp
+fluids_v3.ilk
+fluids_v3.lib
+fluids_v3.pdb
+fluids_v3.sdf
+fluids_v3.suo
+fluids_v3.VC.db
+fluids_v3.VC.VC.opendb
+ipch/
